[package]
name = "greek-vocab-test-maker"
version = "0.1.0"
authors = ["Simon Pitt <si_pitt@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "6.1.2"
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0.106"
csv = "1.1.3"